<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">

    <LinearLayout
        android:id="@+id/main_content_group"
        android:layout_width="237dp"
        android:layout_height="218dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/splash_app_name"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/splash_tagline"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/tagline"
            android:textColor="@color/grey_40"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/splash_loading"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/loading_text"
            android:textColor="@color/grey_40"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/splash_version"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:gravity="center"
        android:text="@string/version_text"
        android:textColor="@color/grey_67"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
